@@ -7,13 +7,12 @@ if (!$::Driver) { use FindBin; exec("./driver.pl", @ARGV, $0); die; }
 # General Public License or the Perl Artistic License.
 
 compile (
-	 v_flags2 => ["--lint-only"],
-	 fails=>1,
-	 expect=>
-'%Warning-CASEWITHX: t/t_case_x_bad.v:\d+: Use of x/\? constant in case statement, \(perhaps intended casex/casez\)
-.*
-%Error: Exiting due to.*',
+	 v_flags2 => ["--x-assign 0"],
 	 );
+
+execute (
+	 check_finished=>1,
+     );
 
 ok(1);
 1;
