@@ -10,6 +10,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 **   Add --autoflush, for flushing streams after $display.  [Steve Tong]
 
+**   Add CASEZWITHX lint warning and if disabled fix handling of casez with Xs.
+
 ***  Add $feof, $fgetc, $fgets, $fflush, $fscanf, $sscanf. [Holger Waechtler]
 
 ***  Add $stime. [Holger Waechtler]
